# SDL3_gpu_examples

./: CMakeLists.txt  LICENSE  README.md
shaders/: BasicTriangle.vert
source/: triangle.cpp
